[tool.poetry]
name = "rag-project"
version = "0.1.0"
description = "Simple RAG chat-bot for PoC"
authors = ["Ivan Khrop"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.4.7"
llama-index-embeddings-ollama = "^0.6.0"
chromadb = "^1.0.0"
streamlit = "^1.44.1"
openai = "^1.70.0"
pymupdf = "^1.25.5"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
langchain = "^0.3.23"
streamlit-pdf-viewer = "^0.0.22"
ragas = "^0.2.14"
rapidfuzz = "^3.13.0"
sentence-transformers = "^4.1.0"
langdetect = "^1.0.9"
pycountry = "^24.6.1"
bm25s = "^0.2.12"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
